stort set færdig

--- a/tema_4.html
+++ b/tema_4.html
@@ -43,45 +43,142 @@
             <div class="indryk">
                 <p>På dette tema har vi videre arbejdet med rigtig meget af det vi lærte på tema 2 og bygget videre på den viden. Vi har arbejdet i forskellige faser op til slutproduktet, med forskellig fokus i hver fase. Herunder vil jeg vise de forskellige faser med den samlet viden og produktivitet samt billeder af det vi har arbejdet med i klassen, og på temaopgaven. </p>
             </div>
-            <div>
-                <h2>Første fase</h2>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            
+                <div class="indryk">
+                    <h2>Første fase</h2>
                     <p>I den første fase arbejdede vi med vores spilkoncept og de ideer vi havde. Her fik vi også præsenteret kravene til den endelige opgave, og hvilke muligheder der var i form af den kode, vi senere vil lære (fx. der skal kun være et level, mindst en god og en dårlig karakter osv). </p>
-                    <h3>Designstil</h3>
-                        <p>Vi startede ud med at vælge en stil ud fra et kæmpe udvalg (der blev præsenteret i klassen) Jeg valgte selv space up!, der gør meget brug af baby bias (stort hoved, lille krop og simple mimik med øjne, næse og store røde kinder), bouba (runde former) effekt og er meget minimalistisk designet.</p>
-                    <h3>Koncept</h3>
-                        <p>Derefter skulle vi i gang med at finde et koncept til vores eget spil. Vi fik udleveret et idegenererings krydsliste-øvelse og forskellige mind maps hvor vi skulle ide genere nogle koncepter. Jeg blev opmærksom på at jeg blev meget fastlåst af disse metoder og valgte i stedet at lave en liste med ideer, hvor jeg meget simpelt skrev om en karakter, spil processen og nogle simple regler. Jo længere jeg kom med mine ideer kunne jeg mærke at de blev mere og mere kreative og fandt til sidst på The Highland Game.</p>
-                    <h3>Spil-ide</h3>
-                        <p>Du skal hjælpe den skotske grænsekontrol med at sortere i skotter, irer og englændere. De forbandede englændere må selvfølgelig ikke komme over grænsen, så de får en økse i ansigtet (ved klik med musen, der er formet som en økse). </p>
-                        <p>De forskellige karakterer popper op bag ved buske, sten eller hegn placeret i det skotske højland.</p>
-                        <p>Hvis man får ramt en skotte eller en irre med en økse får man en advarsel. Ved tredje advarsel bliver du fyret.</p>
-                        <p>Spillet handler om at sætte rekord i hvor mange englændere du kan nå at få økset ned inden din vagt som grænsekontrol medarbejder er slut.</p>
-                        <p>Jeg har lavet en papirprototype af konceptet som kan ses her</p>
-                        <div class="galleri"></div>
-                    <h3>Skitser og Illustrator</h3>
-                        <p>Med de designprincipper og konceptet, skulle jeg selv i gang med at skitsere mine spilelementer, karakterer, baggrunde osv. Måden jeg gjorde det på var at tegne en masse skitser i hånden, hvorefter jeg tegnede over den karakter jeg bedst kunne lide, i illustrator, så gemte jeg de forskellige kropsdele i biblioteket så jeg kunne bruge dem som base til de andre karakterer. Mange af UI elementerne, baggrunden og forgrunden tegnede jeg hånden (altså uden en skitse bag ved). Vi lærte også at eksportere vores artboards til SVG’er som kunne lægges ind vores kode. Her er lidt billeder af den proces</p>
-                        <div class="gallaeri_2">
-
+                </div>   
+                <div class="grid_1">
+                    <div>
+                        <h3>Designstil</h3>
+                        <p>Vi startede ud med at vælge en stil ud fra et kæmpe udvalg (der blev præsenteret i klassen)</p> 
+                        <p>Jeg valgte selv space up!, der gør meget brug af baby bias (stort hoved, lille krop og simple mimik med øjne, næse og store røde kinder), bouba (runde former) effekt og er meget minimalistisk designet.</p>
+                        <p>Jeg kunne rigtig godt lide hvor simpelt designet var, men at der stadig var dybde i form af skygger og ingen lige linjer</p>
+                        <p>Der er brugt meget simple former til at bygge karakteren op, øjnene er små helt runde cirkler, kinderne er ovale, der 3 enkelte totter hår på hovedet der indikere at karakteren er pelset. Og så er der ikke brugt stroke.</p>
+                        <p>Jeg tog rigtig meget inspiration i måde kroppen, armene og benene er tegnet, samt krydserne for øjnene når karakteren dør. Det var vigtigt for mig at lave en tydelige illusion af, at man som spiller havde ramt en karakter, udover at man selvfølge får point eller en advarsel. </p>
+                        <p>Space Up! har også designet en meget monoton bagrund, med en monokrom farvepallette, det skaber en baggrund hvor der stadig er en form for dybde, men den er heller ikke overvældene, i øjenfaldende eller forstyrende for spilleren. Det gør også at de elemtenter man skal ungå lyser mere op, i kontrast til den meget mørke baggrund.</p>
+                    </div>
+                    <div>
+                        <h4>Space Up!</h4>
+                        <img src="img/tema_4/space_up.jpg" alt="Billede af karakter fra spillet Space up!">
+                    </div>
+                </div>    
+                <div class="color_2"></div>   
+                    <div class="grid_1">
+                        <div>
+                            <div class="indryk">
+                                <h3>Koncept</h3>
+                            </div>
+                                <p>Derefter skulle vi i gang med at finde et koncept til vores eget spil. Vi fik udleveret et idegenererings krydsliste-øvelse og forskellige mind maps hvor vi skulle ide genere nogle koncepter.</p> 
+                                <p>Jeg blev opmærksom på at jeg blev meget fastlåst af disse metoder og valgte i stedet at lave en liste med ideer, hvor jeg meget simpelt skrev om en karakter, spil processen og nogle simple regler. Jo længere jeg kom med mine ideer kunne jeg mærke at de blev mere og mere kreative og fandt til sidst på The Highland Game.</p>
                         </div>
-            </div>
-            <div>
+                        <div> 
+                            <div class="indryk">
+                                <h3>Spil-ide</h3>
+                            </div> 
+                                <p>Du skal hjælpe den skotske grænsekontrol med at sortere i skotter, irer og englændere. De forbandede englændere må selvfølgelig ikke komme over grænsen, så de får en økse i ansigtet (ved klik med musen, der er formet som en økse). </p>
+                                <p>De forskellige karakterer popper op bag ved buske, sten eller hegn placeret i det skotske højland.</p>
+                                <p>Hvis man får ramt en skotte eller en irre med en økse får man en advarsel. Ved tredje advarsel bliver du fyret.</p>
+                                <p>Spillet handler om at sætte rekord i hvor mange englændere du kan nå at få økset ned inden din vagt som grænsekontrol medarbejder er slut.</p>
+                                <p>Jeg har lavet en papirprototype af konceptet som kan ses her</p>
+                                
+                        </div>
+                    </div>
+                    <div class="grid_2">
+                        <div>
+                            <h4>Scene 1</h4>
+                            <img src="img/tema_4/paper_prototype_1.jpg" alt="Englænder bliver ramt = 1 point">
+                        </div>
+                        <div>
+                            <h4>Scene 2</h4>
+                            <img src="img/tema_4/paper_prototype_2.jpg" alt="Ny englænder bliver ramt = 2 point">
+                        </div>
+                        <div>
+                            <h4>Scene 3</h4>
+                            <img src="img/tema_4/paper_prototype_3.jpg" alt="Ingen englændere at ramme">
+                        </div>
+                        <div>
+                            <h4>Scene 4</h4>
+                            <img src="img/tema_4/paper_prototype_4.jpg" alt="Skotte bliver ramt = 1 advarsel">
+                        </div>
+                        <div>
+                            <h4>Scene 5</h4>
+                            <img src="img/tema_4/paper_prototype_5.jpg" alt="Tiden er ved at løbe ud">
+                        </div>
+                    </div>
+                <div class="color_2"></div>
+                    <div class="grid_1">
+                        <div>
+                            <h3>Skitser og Illustrator</h3>
+                                <p>Med de designprincipper og konceptet, skulle jeg selv i gang med at skitsere mine spilelementer, karakterer, baggrunde osv.</p> 
+                                <p>Måden jeg gjorde det på var at tegne en masse skitser i hånden, hvorefter jeg tegnede over den karakter jeg bedst kunne lide, i illustrator, så gemte jeg de forskellige kropsdele i biblioteket så jeg kunne bruge dem som base til de andre karakterer.</p> 
+                                <p>Mange af UI elementerne, baggrunden og forgrunden tegnede jeg hånden (altså uden en skitse bag ved). Vi lærte også at eksportere vores artboards til SVG’er som kunne lægges ind i vores kode.</p> 
+                                <p>Jeg endte med at lave nogen af UI elementerne om efter at have indsat dem i mine kode. Jeg gjorde det blandt andet, fordi det var svært at se point og advarsler. Og så ændrede jeg uret til at have visere.</p>
+                                <p>Her er lidt billeder af den proces</p>
+
+                        </div> 
+                        <div>
+                            <h4>Skitser</h4>
+                            <div class="grid_3">
+                                <div><img src="img/tema_4/skitse_1.jpg" alt=""></div>
+                                <div><img src="img/tema_4/skitse_2.jpg" alt=""></div>
+                                <div><img src="img/tema_4/skitse_3.jpg" alt=""></div>
+                                <div><img src="img/tema_4/skitse_4.jpg" alt=""></div>
+                                <div><img src="img/tema_4/skitse_5.jpg" alt=""></div>
+                                <div><img src="img/tema_4/asset_drawing.png" alt=""></div>
+                            </div>
+                        </div> 
+                    </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="indryk">
                 <h2>Anden fase</h2>
-                    <p>I den anden fase tog vi fat på opbygningen af vores HTML-struktur, vi byggede videre på den viden vi havde fået på tema 2 og lærte at bruge ID frem for klasser, at strukture hvilke elementer der skulle ligge i de forskellige ID’er og så lærte vi at lave animationer med keyframes, som vi senere skal bruge i vores Javascript, samt vi lærte at indsætte vores spilelementer ind (baggrunde, karakterer, UI og de forskellige forgrunde) og plasere dem med CSS ved at bruge transform og positionering.</p>
+                    <p>I den anden fase tog vi fat på opbygningen af vores HTML-struktur, vi byggede videre på den viden vi havde fået på tema 2 og lærte at bruge ID frem for klasser, at strukture hvilke elementer der skulle ligge i de forskellige ID’er og så lærte vi at lave animationer med keyframes, som vi senere skal bruge i vores Javascript.</p> 
+                    <p>Samt vi lærte at indsætte vores spilelementer ind (baggrunde, karakterer, UI og de forskellige forgrunde) og plasere dem med CSS ved at bruge transform og positionering.</p>
             </div>
-            <div>
-                <h2>Tredje fase, fjerde fase og femte fase</h2>
-                    <p>Det var de disse 3 faser, vi lærte Javascript. Vi startede blødt ud med at lære at styre de forskellige elementer i spillet fx. start og stop af animationer. Vi lærte hvordan vi kunne få spil elementerne til at dukke op nye steder efter animation stop. Jeg havde selv valgt at mine karaktere, ved at klikke stoppede op, ændre mimik til død (animere mellem visning af to karakter designs) samt en fade-out inden den skulle dukke op et nyt sted.</p>
-                    <p>Efterfulgt lærte vi at programmere de funktioner der gør at vi optjener point, mister liv og at der er en mulighed for at vinde spillet. I mit design var det meget vigtigt at gøre det klart for spilleren at man optjente point ved at klikke på den “onde” figur og få advarsler (miste liv) hvis man trykkede på de “gode” samt at jeg vil gøre spillet mere attraktivt at spille igen, derfor indsatte jeg en high-score måler.</p>
-                    <p>Til sidst lærte vi hvordan vi får lydeffekter ind i vores spil via javascript, Jeg vil selv gerne have implementeret lyde i mit spil, men jeg var ikke helt sikker på hvilke lyde jeg skulle bruge, så jeg endte med at vælge det fra og fokusere på nogle andre elementer.</p>
-                    <p>Det var også i de her faser, at vi blev introduceret til aktivitetsdiagrammer og state machine diagrammer. Som i bund og grund er en visuel oversigt over flowet i spillet. Aktivitets diagrammet er en mere simpel version der viser flowet i spillet, og state machine diagrammet et en mere detaljeret version der viser flowet i spillet men også detaljeret hvad der sker når man har trykket et sted, eller hvis man ikke trykker.</p> 
-                    <p>Jeg har mine to diagrammer liggende her:</p>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <div>
+                    <h2>Tredje fase, fjerde fase og femte fase</h2>
+                        <p>Det var de disse 3 faser, vi lærte Javascript.</p> 
+                        <p>Vi startede blødt ud med at lære at styre de forskellige elementer i spillet fx. start og stop af animationer. Vi lærte hvordan vi kunne få spil elementerne til at dukke op nye steder efter animation stop.</p> 
+                        <p>Jeg havde selv valgt at mine karaktere, ved at klikke stoppede op, ændre mimik til død (animere mellem visning af to karakter designs) samt en fade-out inden den skulle dukke op et nyt sted.</p>
+                        <p>Efterfulgt lærte vi at programmere de funktioner der gør at vi optjener point, mister liv og at der er en mulighed for at vinde spillet.</p> 
+                        <p>I mit design var det meget vigtigt at gøre det klart for spilleren, at man optjente point ved at klikke på den “onde” figur og få advarsler (miste liv) hvis man trykkede på de “gode”, samt at jeg vil gøre spillet mere attraktivt at spille igen, derfor indsatte jeg en high-score måler.</p>
+                        <p>Til sidst lærte vi hvordan vi får lydeffekter ind i vores spil via javascript.</p>
+                        <p>Jeg vil selv gerne have implementeret lyde i mit spil, men jeg var ikke helt sikker på hvilke lyde jeg skulle bruge, så jeg endte med at vælge det fra og fokusere på nogle andre elementer.</p>
+                        <p>Det var også i de her faser, at vi blev introduceret til aktivitetsdiagrammer og state machine diagrammer. Som i bund og grund er en visuel oversigt over flowet i spillet. Aktivitets diagrammet er en mere simpel version der viser flowet i spillet, og state machine diagrammet et en mere detaljeret version der viser flowet i spillet men også detaljeret hvad der sker når man har trykket et sted, eller hvis man ikke trykker.</p> 
+                        <p>Mine to diagrammer kan ses til højre.</p>
+                </div>
+                <div>
+                    <h4>Aktivitetsdiagram</h4>
+                    <img src="img/tema_4/aktivitetsdiagram.drawio.png" alt="Aktivitetsdiagram">
+                    <h4>Statemachine diagram</h4>
+                    <img src="img/tema_4/statemachine.drawio.png" alt="Statemachine diagram">
+                </div>
             </div>
-            <div>
-                <h2>Slut fasen</h2>
-                    <p>Slut fasen handlede i sin enkelhed om at vi skulle have færdiggjort vores spil, få lagt de forskellige start, slut (vind, tabt) samt knapper og andet ind. Derefter skulle vi designede tilsvarende sider til hjemmesiden, der forklarede hele processen med spillet, fortælle om vores design stil, de teknikker vi har brugt og alle vores forskellige elementer af spillet.</p>
-                    <p>Vi afsluttede med at have en fernisering,hvor vi kunne prøve hinandens spil, samt vi lavede en survey som folk kunne gå ind at svare på efter at have spillet spillet.</p> 
-                    <p>Jeg har link til spillet og min survey her, de vil åbne i en ny fane.</p>
-                    <a href="../tema_4_animation/tema_opgave/spil.html" target="_blank">Spil!</a>
-                    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScETgT3R-Wzv9I7cUOsAx0QU4v1WdYLzzhLasxJr_NCmpjy1w/viewform">Survey!</a>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <div class="order"><img src="img/tema_4/game_screen_shot.png" alt=""></div>
+                <div class="indryk">
+                    <h2>Slut fasen</h2>
+                        <p>Slut fasen handlede i sin enkelhed om at vi skulle have færdiggjort vores spil, få lagt de forskellige start, slut (vind, tabt) samt knapper og andet ind.</p> 
+                        <p>Derefter skulle vi designede tilsvarende sider til hjemmesiden, der forklarede hele processen med spillet, fortælle om vores design stil, de teknikker vi har brugt og alle vores forskellige elementer af spillet.</p>
+                        <p>Vi afsluttede med at have en fernisering, hvor vi kunne prøve hinandens spil, samt vi lavede en survey som folk kunne gå ind at svare på efter at have spillet spillet.</p> 
+                        <p>Jeg har link til spillet og min survey her, de vil åbne i en ny fane.</p>
+                        <div class="indryk">
+                            <a href="../tema_4_animation/tema_opgave/spil.html" target="_blank">Spil!</a>
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScETgT3R-Wzv9I7cUOsAx0QU4v1WdYLzzhLasxJr_NCmpjy1w/viewform">Survey!</a>
+                        </div>
+                </div>
             </div>
         </div>
 
