færdig, men med check up

--- a/tema_5.html
+++ b/tema_5.html
@@ -40,7 +40,74 @@
 
         <h1>Tema 5</h1>
         <div class="frame">
-
+            <div class="indryk">
+                <p>På tema 5 gik vi i dybden med forskellige kamera, lydoptagere og andet godt fra tek lounge på Kea, samtidig fik vi lov at arbejde sammen som hold, med at løse temaopgaven.</p>
+                <p>Her fik vi også præsenteret nogle metoder til hvordan vi kunne få arbejdet til at køre bedst muligt. </p>
+                <p>Nedenunder er en samling af de metoder vi har lært og brugt, samt tema opgaven til sidst.</p>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="indryk">
+                <h2>Tech og Story Lab</h2>
+                    <p>Vi startede temaet op med besøge Kea Tech og Story Lab. Her fik vi en grundig introduktion i, hvilke udstyr vi kan låne, hvordan det virker og lidt af de krav der var til den kommende opgave. </p>
+                    <p>Vi fik også en gennemgang af brugbare apps til mobiltelefonen, hvordan vi får filmet i bedste kvalitet og en masse småting man måske ikke får tænkt over.  </p>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <div>
+                    <h2>Programmer</h2>
+                        <p>Vi blev lært op i en masse nye programmer på dette tema. Vi lagde ud med præmier pro hvor vi skulle filme en video opgave, der gik ud på at lave et interview med en person der har en passion. </p>
+                        <p>Vi blev introduceret i hvordan man klipper mellem de forskellige shorts, laver sekvenser, bruger b-rolls til at gøre videoen mere dynamisk, indsætte lower third og lave transsissions.</p>
+                        <p>Derudover fik vi også en masse gode metoder til at filme indhold til vores videoer, som fx. 5-skudsregelsen der beskriver de forskellige vinkler og klip man kan filme og bruge som b-rolls, storyboard som bruges til at planlægge hvad man skal filme, hvornår man skal filme og i hvilken sammenhæng man skal filme (man planlægger historien og hvordan den skal filmes), interviewguide der kan være en hjælpende hånd, når man skal lave interview, så har man nogle grundlæggende spørgsmål man kan tale ud fra. </p>
+                        <p>Senere blev vi også introduceret til GitHub på browseren og i Visual Studio Code, et godt redskab til at dele sin kode og arbejde sammen om software. Det blev et godt redskab i tema opgaven da vi kunne samle vores kode simpelt og nemt til det redesign vi skulle lave. </p>
+                        <p>Ud over GitHub, lærte vi også at bruge Trello Board, et online whiteboard, hvor vi kunne uddelegere opgaver, se hvor langt vi var nået, hvem der laver hvad og hvornår.</p>
+                        <p>Til højre ses et billede af min gruppes Trello board</p>
+                </div>
+                <div>
+                    <img src="img/tema_5/telloboard.png" alt="Min gruppes Trello board">
+                </div>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <div class="order"><img src="img/tema_5/form.png" alt="Et eksemple på formular"></div>
+                <div>
+                    <h2>Kode og tests</h2>
+                        <p>Tema 5 var ikke et af de kolde tunge temaer, men vi lærte dog at bruge HTML forms til at sætte formularer op på hjemmesider, så vi kunne bruge dem i vores redesign. Vi havde for eksempel i vores opgave brug for at lave en formular hvor man kunne indsende oplysninger samt hvilken dato og tid man vil booke en aftale.</p>
+                        <p>Og så lærte vi hvordan man implementere videoer ind på sit website, hvilken kvalitet de skal være og hvordan man gør siden nemmest at loade med en video, samt vi lærte om custom property (css variabel) som betyder at man sætter nogle variabler for skrifttype, størrelse, farve, margin og padding som man kan bruge gennem sit site, og nemt ændre hvis man har brug for det.</p>
+                        <p>Vi fik også en introduktion til BERT test, 5-sek test, ekspertstest og lighthousetest. </p>
+                        <p>BERT står for bipoler, emotionel, respons test, der i alt sin simpelhed går ud på at man har 1-5 poler med modsigende ender (fx varm-kold, sød-sur, flot-grim) som bruger kan man få lov at vælge hvilken side man hælder mest til. Den er god til at få indblik i brugerens opfattelse af produktet.</p>
+                        <p>5-sek test handler om at brugeren får lov at opleve noget i 5 sekunder, for derefter at svare på 2-5 meget simple spørgsmål, det handler om at fange de første tanker der går igennem brugerens hoved, da de giver et godt indblik i det udtryk det testede produkt har.</p>
+                        <p>Eksperttest er ikke tiltænkt en forbruger, men en ekspert der systematisk gennemgår fx. et website for brugervenlighed, i forhold til kendte brugervenlighedsprincipper.</p>
+                        <p>Lighthousetesten er en chrome browser test, udviklet af google. Den skander ens website og vurdere ud fra 5 parametre, hvor brugervenligt og nemt ens website er, og hvor tungt den er at køre (hvis man fx. har 10.000 billeder der loader langsomt). </p>
+                </div>
+            </div>
+        </div>
+        <div class="color"></div>
+        <div class="frame">
+            <div class="grid_1">
+                <div>
+                    <h2>Virksomhedssite</h2>
+                        <p>Vores temaopgave gik ud på at samarbejde i teams, finde en butik men et website og så designe det, lave en video om butikken og til sidst fremlægge i form af pecha kucha (en fremvisning metode hvor powerpoint er automatiseret på tid) udover det var kravene også at vi skulle benytte os af github, dokumentere vores arbejdsproces, samt at vi skal benytte os af SCRUM metoden i vores samarbejde (scrum møder) </p>
+                        <p>Vores opgave omhandler en skønhedssalon ved navn DJ Beauty, der blev grundlagt i Litauen i 2012. Salonen tilbyder services såsom: make-up, nat/dag, manicure/pedicure, forskellige former for massage, voksbehandling, øjenvipper og øjenbrynsbehandlinger.</p>
+                        <p>Til højre ses billeder af vores styletile samt de dele af hjemmesiden jeg kodet</p>
+                        <p>Her et et link til en survey vi lave, åbner i ny fane</p>
+                        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd7ycnyISSEXMDdJPieH8IMsSYvEhI84tPeEXJ8Ze4R9YhjVw/viewform?usp=sf_link">Link!</a>
+                        <p>Og til sidst er der et link til vores redesign af hjemmesiden, åbner i ny fane (ops. brugernavn og kode er kea)</p>
+                        <a target="_blank" href="https://ivanpopovkea.dk/dj_beauty/">Link!</a>
+                </div>
+                <div class="grid_2">
+                    <div><img src="img/tema_5/styletile.png" alt="styletile"></div>
+                    <div><img src="img/tema_5/øjnbryn_gallary.png" alt="gallary over produkt"></div>
+                    <div><img src="img/tema_5/make_up_gallary.png" alt="gallary over produkt"></div>
+                    <div><img src="img/tema_5/make_up_artist.png" alt="Om artisten"></div>
+                    <div><img src="img/tema_5/about_us_screen_shot.png" alt="om salonen"></div>
+                </div>
+            </div>
         </div>
 
     </main>
