sidste touch up + galleri

--- a/om_mig.html
+++ b/om_mig.html
@@ -82,6 +82,46 @@
                 </div>
             </div>
         </div>
+        <div class="color"></div>
+        <h5>Galleri</h5>
+        <div class="galleri">
+            <div>
+                <img src="img/om_mig/battle_west.png" alt="patches på en battle west">
+            </div>
+            <div>
+                <img src="img/om_mig/birthday.png" alt="Fødselsdags kage med skotsk flag">
+            </div>
+            <div>
+                <img src="img/om_mig/chokolade_pynt.png" alt="chokolade pynt">
+            </div>
+            <div>
+                <img src="img/om_mig/danish.png" alt="weinerbrød">
+            </div>
+            <div>
+                <img src="img/om_mig/nytår.png" alt="Kransekage tårn">
+            </div>
+            <div>
+                <img src="img/om_mig/segl_sæt.png" alt="lak segls sæt">
+            </div>
+            <div>
+                <img src="img/om_mig/segl_1.png" alt="lak segl">
+            </div>
+            <div>
+                <img src="img/om_mig/puslespil.png" alt="Hjemmelavet pudslespil til gave">
+            </div>
+            <div>
+                <img src="img/om_mig/first.png" alt="Warhammer space marine">
+            </div>
+            <div>
+                <img src="img/om_mig/priest.png" alt="Warhammer space marine">
+            </div>
+            <div>
+                <img src="img/om_mig/third.png" alt="Warhammer space marine">
+            </div>
+            <div>
+                <img src="img/om_mig/orc.png" alt="Warhammer orc">
+            </div>
+        </div>
     </main>
 
     <footer>
