--- a/tema_2.html
+++ b/tema_2.html
@@ -76,8 +76,8 @@
                         <p>Kravene lød på at websitet skulle bestå af 5 sider der skulle kodes efter udleveret layout diagram og wireframe.</p>
                         <p>Vi skulle benytte os af farver og to forskellige fonte, samt at alt styling skulle samles i to CSS dokumenter.</p>
                         <p>De metoder jeg blandt andet brugte til at løse opgaven var semantisk markup, code reuse og opsætning af en hierarkisk mappestruktur samt navigation, navnekonventioner og css grid, flex, media queries. Da meget af indholdet allerede var givet til os, har jeg brugt de forskellige metoder til at skabe overblik, struktur samt skabe et simpelt design med farver og font.</p>
-                        <p>Til venstre kan ses mit eget computer set up, som vi også skulle præcentere i vores opgave.</p>
-                        <p>Det færdige resultat kan ses her.</p>
+                        <p>På billedet kan ses mit eget computer set up, som vi også skulle præcentere i vores opgave.</p>
+                        <p>Det færdige resultat kan ses her, link åbner i ny fane.</p>
                         <a target="_blank" href="../tema_2_grundlæggende_web/websites/website/index.html">Link!</a>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                                 <p>Siden skal være responsiv. Navigationsmenuen skal også være responsiv. Der skal bruges webfonte enten via googlefont, css @fontface eller Adobe Typekit. Eget favicon. Html skal validere uden fejl.</p>
                             <h3>Design krav:</h3> 
                                 <p>Design skal dokumenteres i pdf (skal minimum inkludere wireframes, moodboard(s) samt styletile) En kort beskrivelse af mit koncept. Du skal lave en beskrivelse af designprincipperne, som det er implementeret i dit site.</p>
-                                <p>Vi startede hele processen med at vælge en designstil, sætte os ind i den valgte stil og derefter udarbejde moodboards, wireframes og styletile. Jeg valgte selv at gå med retrostilen i form af et vintage design. Mit styletile kan ses i bunden af siden</p>
+                                <p>Vi startede hele processen med at vælge en designstil, sætte os ind i den valgte stil og derefter udarbejde moodboards, wireframes og styletile. Jeg valgte selv at gå med retrostilen i form af et vintage design.</p>
                             <h3>Min process</h3>
                                 <p>Mit koncept gik ud på at genskabe looket fra en vintage avis. Jeg brugte kolonner til at inddele min tekst i mindre sektioner, for at gøre den mere læsbar og give et større overblik over teksten. Så har givet under overskriften (h2) en border, der giver et indtryk af, hvilke overskrifter der tilhører de forskellige kolonner. </p>
                                 <p>Jeg har valgt at bruge illustrationer i stedet for billeder, for at give et bedre indtryk af den gamle avis type, hvor billeder ikke blev brugt, fordi de ikke kunne blive trykt på selve avisen.</p>
@@ -101,7 +101,9 @@
                                 <a target="_blank" href="../tema_2_grundlæggende_web/websites/emnesite/index.html">Link!</a>
                 </div>
                 <div>
+                    <h4>Styletile</h4>
                     <img src="img/tema_2/styletile.png" alt="styletile">
+                    <h4>Forside fra emnesite</h4>
                     <img src="img/tema_2/front_page.png" alt="Emnesidens forside">
                 </div>
             </div>  
