--- a/tema_3.html
+++ b/tema_3.html
@@ -96,7 +96,8 @@
         <div class="frame">
             <div class="indryk">
                 <h3>Surveys</h3>
-                    <p>Bruges til at samle et stort datasæt omkring den brede befolknings meninger og holdninger fx. til kvalitet, pris eller design. Jeg fik ikke selv lavet en survey, da vi lavede en samlet i klassen, men da jeg skulle bruge informationerne bagefter kunne jeg ikke finde dem. Men en survey her kunne have været rigtig god til at få et større datasæt omkring hvad folk har lyst til at betale for t-shirts og hvilken forventning der er til kvalitet, samt få en fornemmelse af hvilken stil/type t-shirts der er størst interesse i.</p>
+                    <p>Bruges til at samle et stort datasæt omkring den brede befolknings meninger og holdninger fx. til kvalitet, pris eller design. Jeg fik ikke selv lavet en survey, da vi lavede en samlet i klassen, men da jeg skulle bruge informationerne bagefter kunne jeg ikke finde dem.</p> 
+                    <p>En survey her kunne have været rigtig god til at få et større datasæt omkring hvad folk har lyst til at betale for t-shirts og hvilken forventning der er til kvalitet, samt få en fornemmelse af hvilken stil/type t-shirts der er størst interesse i.</p>
             </div>
         </div>    
         <div class="color_2"></div>
@@ -141,7 +142,7 @@
                         <p>Når vi har en masse data efter researchfasen og lavet indsigt drevet beslutningsproces, kan vi gå i gang med design ved at lave sketches, moodboard, styletile. </p>
                         <p>Her kan man blandt andet gøre brug af forskellige teknikker, til at starte den kreative proces, som lightning demo/ideas (sæt 10 min af og skitser nogle ideer ned). Crazy 8 hvor du folder a4 så det danner 8 rum,og så skitserer du på en ide i 1 minut. går videre til næste rum og skitserer samme ide, men et nyt tiltag i 1 minut. Når alle rum er nådet har man 8 forskellige designs af samme grundide. Solution sketch hvor man laver en mere gennemgribende “pæn” sketch af sin ide, derefter kan man lave heat map med venner og deres solution sketch og blive enige om hvilken ide der er bedst (god hvis man arbejder i gruppe).</p>
                         <p>Til sidst kan man lave en speed critique af nogle solution sketches, hvor man gennemgår hele designet (hvad er godt, hvad virker knapt så godt, kunne man sammensætte de her to ideer eller andet). Men kan eventuelt sammensætte gode ideer fra speed citique til en 2. iteration af solution sketch (en løsningsprototype).</p>
-                        <p>Her har jeg lavet et lille galleri med mine skitser, prototyper og andet godt.</p>
+                        <p>Jeg har lavet et lille galleri med mine skitser, prototyper og andet godt.</p>
                 </div>
                 <div class="grid_4">
                     <div>
@@ -157,7 +158,7 @@
                         <img src="img/tema_3/solution_sketch.png" alt="Solution sketch">
                     </div>
                     <div> 
-                        <h4>Muesuem heat map</h4>
+                        <h4>Heat map</h4>
                         <img src="img/tema_3/museum_heat_map.png" alt="Muesuem heat map">
                     </div>
                     <div class="span_1">
