--- a/tema_5.html
+++ b/tema_5.html
@@ -64,9 +64,9 @@
                         <p>Derudover fik vi også en masse gode metoder til at filme indhold til vores videoer, som fx. 5-skudsregelsen der beskriver de forskellige vinkler og klip man kan filme og bruge som b-rolls, storyboard som bruges til at planlægge hvad man skal filme, hvornår man skal filme og i hvilken sammenhæng man skal filme (man planlægger historien og hvordan den skal filmes), interviewguide der kan være en hjælpende hånd, når man skal lave interview, så har man nogle grundlæggende spørgsmål man kan tale ud fra. </p>
                         <p>Senere blev vi også introduceret til GitHub på browseren og i Visual Studio Code, et godt redskab til at dele sin kode og arbejde sammen om software. Det blev et godt redskab i tema opgaven da vi kunne samle vores kode simpelt og nemt til det redesign vi skulle lave. </p>
                         <p>Ud over GitHub, lærte vi også at bruge Trello Board, et online whiteboard, hvor vi kunne uddelegere opgaver, se hvor langt vi var nået, hvem der laver hvad og hvornår.</p>
-                        <p>Til højre ses et billede af min gruppes Trello board</p>
                 </div>
                 <div>
+                    <h4>Trello board</h4>
                     <img src="img/tema_5/telloboard.png" alt="Min gruppes Trello board">
                 </div>
             </div>
@@ -74,7 +74,10 @@
         <div class="color"></div>
         <div class="frame">
             <div class="grid_1">
-                <div class="order"><img src="img/tema_5/form.png" alt="Et eksemple på formular"></div>
+                <div class="order">
+                    <h4>Et eksempel på en formular</h4>
+                    <img src="img/tema_5/form.png" alt="Et eksemple på formular">
+                </div>
                 <div>
                     <h2>Kode og tests</h2>
                         <p>Tema 5 var ikke et af de kolde tunge temaer, men vi lærte dog at bruge HTML forms til at sætte formularer op på hjemmesider, så vi kunne bruge dem i vores redesign. Vi havde for eksempel i vores opgave brug for at lave en formular hvor man kunne indsende oplysninger samt hvilken dato og tid man vil booke en aftale.</p>
@@ -94,18 +97,18 @@
                     <h2>Virksomhedssite</h2>
                         <p>Vores temaopgave gik ud på at samarbejde i teams, finde en butik men et website og så designe det, lave en video om butikken og til sidst fremlægge i form af pecha kucha (en fremvisning metode hvor powerpoint er automatiseret på tid) udover det var kravene også at vi skulle benytte os af github, dokumentere vores arbejdsproces, samt at vi skal benytte os af SCRUM metoden i vores samarbejde (scrum møder) </p>
                         <p>Vores opgave omhandler en skønhedssalon ved navn DJ Beauty, der blev grundlagt i Litauen i 2012. Salonen tilbyder services såsom: make-up, nat/dag, manicure/pedicure, forskellige former for massage, voksbehandling, øjenvipper og øjenbrynsbehandlinger.</p>
-                        <p>Til højre ses billeder af vores styletile samt de dele af hjemmesiden jeg kodet</p>
+                        <p>Her ses billeder af vores styletile, samt de dele af hjemmesiden jeg kodet</p>
                         <p>Her et et link til en survey vi lave, åbner i ny fane</p>
-                        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd7ycnyISSEXMDdJPieH8IMsSYvEhI84tPeEXJ8Ze4R9YhjVw/viewform?usp=sf_link">Link!</a>
+                        <a  target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd7ycnyISSEXMDdJPieH8IMsSYvEhI84tPeEXJ8Ze4R9YhjVw/viewform?usp=sf_link">Link!</a>
                         <p>Og til sidst er der et link til vores redesign af hjemmesiden, åbner i ny fane (ops. brugernavn og kode er kea)</p>
                         <a target="_blank" href="https://ivanpopovkea.dk/dj_beauty/">Link!</a>
                 </div>
                 <div class="grid_2">
                     <div><img src="img/tema_5/styletile.png" alt="styletile"></div>
-                    <div><img src="img/tema_5/øjnbryn_gallary.png" alt="gallary over produkt"></div>
-                    <div><img src="img/tema_5/make_up_gallary.png" alt="gallary over produkt"></div>
                     <div><img src="img/tema_5/make_up_artist.png" alt="Om artisten"></div>
+                    <div><img src="img/tema_5/øjnbryn_gallary.png" alt="gallary over produkt"></div>
                     <div><img src="img/tema_5/about_us_screen_shot.png" alt="om salonen"></div>
+                    <div class="span_1"><img src="img/tema_5/make_up_gallary.png" alt="gallary over produkt"></div>
                 </div>
             </div>
         </div>
