--- a/tema_4.html
+++ b/tema_4.html
@@ -41,7 +41,8 @@
         <h1>Tema 4</h1>
         <div class="frame">
             <div class="indryk">
-                <p>På dette tema har vi videre arbejdet med rigtig meget af det vi lærte på tema 2 og bygget videre på den viden. Vi har arbejdet i forskellige faser op til slutproduktet, med forskellig fokus i hver fase. Herunder vil jeg vise de forskellige faser med den samlet viden og produktivitet samt billeder af det vi har arbejdet med i klassen, og på temaopgaven. </p>
+                <p>På dette tema har vi videre arbejdet med rigtig meget af det vi lærte på tema 2 og bygget videre på den viden. Vi har arbejdet i forskellige faser op til slutproduktet, med forskellig fokus i hver fase.</p> 
+                <p>Herunder vil jeg vise de forskellige faser med den samlet viden og produktivitet samt billeder af det vi har arbejdet med i klassen, og på temaopgaven.</p>
             </div>
         </div>
         <div class="color"></div>
@@ -73,7 +74,9 @@
                                 <h3>Koncept</h3>
                             </div>
                                 <p>Derefter skulle vi i gang med at finde et koncept til vores eget spil. Vi fik udleveret et idegenererings krydsliste-øvelse og forskellige mind maps hvor vi skulle ide genere nogle koncepter.</p> 
-                                <p>Jeg blev opmærksom på at jeg blev meget fastlåst af disse metoder og valgte i stedet at lave en liste med ideer, hvor jeg meget simpelt skrev om en karakter, spil processen og nogle simple regler. Jo længere jeg kom med mine ideer kunne jeg mærke at de blev mere og mere kreative og fandt til sidst på The Highland Game.</p>
+                                <p>Jeg blev opmærksom på at jeg blev meget fastlåst af disse metoder og valgte i stedet at lave en liste med ideer, hvor jeg meget simpelt skrev om en karakter, spil processen og nogle simple regler. Jo længere jeg kom med mine ideer kunne jeg mærke at de blev mere og mere kreative og fandt til sidst på The Highland Game, som kan ses til højre.</p>
+                                <p>Nogle andre ideer jeg hvavde var blandt andet et dedektiv spil, hvor man på en sort skærm skulle lyse med sin lommelygte (curseren) for at finde ting i mørket. Jeg blev dog klar over at koden nok ville blive lidt besværlig, samt ikke særlig brugervenligt for mobilspiller.</p>
+                                <p>Og så havde jeg en ide om et hyrdehunde spil, hvor man skulle hjælpe med at fange får/ungå rævende der lurrede, men så kom jeg på højlandspillet og det synes jeg var en meget sjovere ide.</p>
                         </div>
                         <div> 
                             <div class="indryk">
@@ -83,7 +86,15 @@
                                 <p>De forskellige karakterer popper op bag ved buske, sten eller hegn placeret i det skotske højland.</p>
                                 <p>Hvis man får ramt en skotte eller en irre med en økse får man en advarsel. Ved tredje advarsel bliver du fyret.</p>
                                 <p>Spillet handler om at sætte rekord i hvor mange englændere du kan nå at få økset ned inden din vagt som grænsekontrol medarbejder er slut.</p>
-                                <p>Jeg har lavet en papirprototype af konceptet som kan ses her</p>
+                                <p>Jeg har lavet en papirprototype af konceptet som kan ses nedenunder</p>
+                                <h4>Her er en lille scene liste</h4>
+                                <ul>
+                                    <li>Scene 1 = Englænder bliver ramt = 1 point </li>
+                                    <li>Scene 2 = Ny englænder bliver ramt = 2 point</li>
+                                    <li>Scene 3 = Ingen englændere at ramme</li>
+                                    <li>Scene 4 = Skotte bliver ramt = 1 advarsel</li>
+                                    <li>Scene 5 = Tiden er ved at løbe ud</li>
+                                </ul>
                                 
                         </div>
                     </div>
@@ -154,7 +165,6 @@
                         <p>Til sidst lærte vi hvordan vi får lydeffekter ind i vores spil via javascript.</p>
                         <p>Jeg vil selv gerne have implementeret lyde i mit spil, men jeg var ikke helt sikker på hvilke lyde jeg skulle bruge, så jeg endte med at vælge det fra og fokusere på nogle andre elementer.</p>
                         <p>Det var også i de her faser, at vi blev introduceret til aktivitetsdiagrammer og state machine diagrammer. Som i bund og grund er en visuel oversigt over flowet i spillet. Aktivitets diagrammet er en mere simpel version der viser flowet i spillet, og state machine diagrammet et en mere detaljeret version der viser flowet i spillet men også detaljeret hvad der sker når man har trykket et sted, eller hvis man ikke trykker.</p> 
-                        <p>Mine to diagrammer kan ses til højre.</p>
                 </div>
                 <div>
                     <h4>Aktivitetsdiagram</h4>
@@ -167,7 +177,9 @@
         <div class="color"></div>
         <div class="frame">
             <div class="grid_1">
-                <div class="order"><img src="img/tema_4/game_screen_shot.png" alt=""></div>
+                <div class="order">
+                    <img src="img/tema_4/game_screen_shot.png" alt="">
+                </div>
                 <div class="indryk">
                     <h2>Slut fasen</h2>
                         <p>Slut fasen handlede i sin enkelhed om at vi skulle have færdiggjort vores spil, få lagt de forskellige start, slut (vind, tabt) samt knapper og andet ind.</p> 
